🚀 加了个单选demo

--- a/TestDemo.xcodeproj/xcshareddata/xcschemes/TestDemo.xcscheme
+++ b/TestDemo.xcodeproj/xcshareddata/xcschemes/TestDemo.xcscheme
@@ -40,7 +40,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "TestRelease"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -54,7 +54,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "04F7359422CDAA8B007CB0D0"
-            BuildableName = "TestDemo.app"
+            BuildableName = "Demo&#x96c6;&#x5408;.app"
             BlueprintName = "TestDemo"
             ReferencedContainer = "container:TestDemo.xcodeproj">
          </BuildableReference>
